<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/finish_prepare_order"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/full_name_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/app_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/credit_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/default_card_number"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_protein"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/protein_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spicy"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/spicy_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_sauce"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce_ketchup"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/ketchup_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce_hot_sauce"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/hot_sauce_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce_write_sauce"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/write_sauce_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/finish_prepare_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prepare_order"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
